# PartSim

./: .gitignore  BHTree.cpp  BHTree.h  CMakeLists.txt  LICENSE  Particle.cpp  Particle.h  README.md  Space.cpp  Space.h  globals.h  main.cpp
